Second Commit | Changed My Portfolio to MY PORTFOLIO in index.html

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- NAV BAR -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container">
-        <a class="navbar-brand" href="index.html">My Portfolio</a>
+        <a class="navbar-brand" href="index.html">MY PORTFOLIO</a>
         <button
           class="navbar-toggler"
           type="button"
