--- a/index.html
+++ b/index.html
@@ -15,12 +15,22 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <!-- NAV BAR -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <!-- HEADER -->
+    <header class="text-center py-5 custom-bg">
       <div class="container">
-        <a class="navbar-brand" href="index.html">MY PORTFOLIO</a>
+        <h1 class="text-white">Welcome to My Portfolio</h1>
+        <p class="text-white">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+        </p>
+        <a href="#about" class="btn btn-lg btn-light">Learn More</a>
+      </div>
+    </header>
+
+    <!-- NAV BAR -->
+    <nav class="navbar navbar-expand-lg navbar-light custom-bg2">
+      <div class="container">
         <button
-          class="navbar-toggler"
+          class="navbar-toggler border-0 p-0"
           type="button"
           data-bs-toggle="collapse"
           data-bs-target="#navbarNav"
@@ -28,12 +38,12 @@
           aria-expanded="false"
           aria-label="Toggle navigation"
         >
-          <span class="navbar-toggler-icon"></span>
+          <span class="fas fa-bars fa-lg text-white"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="index.html">Home</a>
+              <a class="nav-link" href="#index">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#about">About</a>
@@ -52,18 +62,7 @@
       </div>
     </nav>
 
-    <!-- Header -->
-    <header class="custom-bg text-center py-5">
-      <div class="container">
-        <h1 class="text-white">Welcome to My Portfolio</h1>
-        <p class="text-white">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-        </p>
-        <a href="#about" class="btn btn-lg btn-light">Learn More</a>
-      </div>
-    </header>
-
-    <!-- About -->
+    <!-- ABOUT -->
     <section id="about" class="py-5">
       <div class="container">
         <h2 class="text-center mb-5">About Me</h2>
@@ -90,7 +89,7 @@
       </div>
     </section>
 
-    <!-- Services -->
+    <!-- SERVICES -->
     <section id="services" class="py-5">
       <div class="container">
         <h2 class="text-center mb-5">My Services</h2>
@@ -132,7 +131,7 @@
       </div>
     </section>
 
-    <!-- Portfolio -->
+    <!-- PORTFOLIO -->
     <section id="portfolio" class="py-5">
       <div class="container">
         <h2 class="text-center mb-5">My Portfolio</h2>
@@ -189,7 +188,7 @@
       </div>
     </section>
 
-    <!-- Contact -->
+    <!-- CONTACT -->
     <section id="contact" class="py-5">
       <div class="container">
         <h2 class="text-center mb-5">Contact Me</h2>
@@ -226,17 +225,17 @@
                   <li>
                     <i class="fas fa-map-marker-alt"></i>
                     <span>Address:</span>
-                    <p>123 Main Street, Anytown USA</p>
+                    <p>Baguio City, Philippines</p>
                   </li>
                   <li>
                     <i class="fas fa-phone"></i>
                     <span>Phone:</span>
-                    <p>(123) 456-7890</p>
+                    <p>+63 997 225 8046</p>
                   </li>
                   <li>
                     <i class="fas fa-envelope"></i>
                     <span>Email:</span>
-                    <p>info@example.com</p>
+                    <p>ralphvinzedeguzman@gmail.com</p>
                   </li>
                 </ul>
               </div>
@@ -245,17 +244,24 @@
         </div>
       </div>
     </section>
-    <!-- Footer -->
+
+    <!-- Back to top button -->
+    <button
+      type="button"
+      class="btn btn-danger btn-floating btn-lg"
+      id="btn-back-to-top"
+    >
+      <i class="fas fa-arrow-up"></i>
+    </button>
+
+    <!-- FOOTER -->
     <footer class="bg-dark py-3">
       <div class="container">
         <div class="row">
-          <div class="col-md-6">
-            <p class="text-white">© 2023 John Doe. All Rights Reserved.</p>
-          </div>
-          <div class="col-md-6">
-            <ul class="list-unstyled d-flex justify-content-end">
+          <div class="col-md-12 text-center">
+            <ul class="list-unstyled d-flex justify-content-center mb-3">
               <li>
-                <a href="#"><i class="fab fa-facebook-f"></i></a>
+                <a href="#"><i class="fab fa-facebook"></i></a>
               </li>
               <li>
                 <a href="#"><i class="fab fa-twitter"></i></a>
@@ -267,12 +273,19 @@
                 <a href="#"><i class="fab fa-linkedin-in"></i></a>
               </li>
             </ul>
+            <p class="text-white mb-0">
+              2023 &copy; Ralph Vinze De Guzman. All Rights Reserved.
+            </p>
           </div>
         </div>
       </div>
     </footer>
 
     <!-- JavaScript -->
+    <script
+      src="https://kit.fontawesome.com/6964fa2278.js"
+      crossorigin="anonymous"
+    ></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
@@ -282,4 +295,4 @@
     <script src="main.js"></script>
   </body>
 </html>
-<!-- End of the Code -->
+<!-- END OF THE CODE -->
