Fourth Commit | Added Contents (Replaced the Lorem Ipsum) in index.html | Fixed the radius in style.css (line 66)

--- a/index.html
+++ b/index.html
@@ -18,9 +18,18 @@
     <!-- HEADER -->
     <header class="text-center py-5 custom-bg">
       <div class="container">
-        <h1 class="text-white">Welcome to My Portfolio</h1>
+        <h1 class="text-white">MY PORTFOLIO</h1>
         <p class="text-white">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+          My web development and creative app portfolio showcases my passion for
+          using technology to create visually stunning, user-friendly websites
+          and applications. I have a strong understanding of web development
+          concepts, programming languages, and creative apps like Adobe
+          Photoshop and Premiere. Through my projects, I've highlighted my
+          ability to collaborate with clients and deliver high-quality web
+          development solutions within budget and on time. My portfolio reflects
+          my creativity, attention to detail, and project management skills. It
+          demonstrates my commitment to excellence, my love for creativity, and
+          my desire to make a positive impact in the field of web development.
         </p>
         <a href="#about" class="btn btn-lg btn-light">Learn More</a>
       </div>
@@ -65,24 +74,42 @@
     <!-- ABOUT -->
     <section id="about" class="py-5">
       <div class="container">
-        <h2 class="text-center mb-5">About Me</h2>
+        <h2 class="text-center mb-5"><strong>About Me</strong></h2>
         <div class="row">
           <div class="col-lg-6">
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus
-              at placerat mauris. Ut scelerisque neque a mauris vestibulum
-              euismod. Nulla imperdiet est vel sapien venenatis, in mollis elit
-              fermentum. Curabitur vel enim eget erat bibendum imperdiet.
-              Aliquam erat volutpat.
+              I have a natural curiosity and passion for technology, and I am
+              constantly seeking new opportunities to learn and grow. I am
+              deeply committed to my goal of becoming a web developer, and I
+              have a clear vision of the kind of impact I want to make in the
+              field. With my strong work ethic and dedication to excellence, I
+              am well-positioned to succeed in the competitive world of web
+              development. I possess a combination of creativity, technical
+              expertise, and problem-solving skills that will enable me to
+              create stunning, user-friendly websites that meet the needs of
+              clients and users alike. As a future web developer, I have a
+              promising future ahead of me, and I have no doubt that I will
+              achieve my goals and make a significant impact in the field of web
+              development.
             </p>
           </div>
           <div class="col-lg-6">
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus
-              at placerat mauris. Ut scelerisque neque a mauris vestibulum
-              euismod. Nulla imperdiet est vel sapien venenatis, in mollis
-              elitfermentum. Curabitur vel enim eget erat bibendum imperdiet.
-              Aliquam erat volutpat.
+              As someone with a strong background in creative apps like Adobe
+              Photoshop and Adobe Premiere, I have a natural eye for detail and
+              a talent for creating visually stunning graphics and video
+              content. My experience in these apps has allowed me to develop a
+              keen understanding of the creative process, from ideation to
+              execution. My passion for creating has led me to explore other
+              creative tools and technologies, and I'm always seeking new
+              opportunities to learn and grow. Whether working on a personal
+              project or collaborating with others, I approach every task with
+              enthusiasm, creativity, and a commitment to excellence. With my
+              background in Adobe Photoshop and Adobe Premiere, I am
+              well-equipped to succeed in a wide range of creative fields, from
+              graphic design and video editing to animation and web design. My
+              experience in these apps gives me a strong foundation upon which
+              to build my skills and pursue my creative passions.
             </p>
           </div>
         </div>
@@ -92,15 +119,18 @@
     <!-- SERVICES -->
     <section id="services" class="py-5">
       <div class="container">
-        <h2 class="text-center mb-5">My Services</h2>
+        <h2 class="text-center mb-5"><strong>My Services</strong></h2>
         <div class="row">
           <div class="col-md-4 mb-4">
             <div class="card">
               <div class="card-body">
-                <h5 class="card-title">Web Design</h5>
+                <h5 class="card-title"><strong>Web Design</strong></h5>
                 <p class="card-text">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                  Phasellus at placerat mauris.
+                  If you are looking for an amateur web designer with a creative
+                  mind and the ability to create visually stunning websites,
+                  look no further. My web design service offers a unique
+                  approach to web design, incorporating my creative talents and
+                  technical expertise to create websites that stand out.
                 </p>
               </div>
             </div>
@@ -108,10 +138,13 @@
           <div class="col-md-4 mb-4">
             <div class="card">
               <div class="card-body">
-                <h5 class="card-title">Web Development</h5>
+                <h5 class="card-title"><strong>Web Development</strong></h5>
                 <p class="card-text">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                  Phasellus at placerat mauris.
+                  If you're in need of a web developer who has a creative mind
+                  and can bring unique ideas to your website, I'm here to help.
+                  While I may be an amateur in the field of web development, I
+                  have a passion for creating visually appealing and
+                  user-friendly websites.
                 </p>
               </div>
             </div>
@@ -119,10 +152,13 @@
           <div class="col-md-4 mb-4">
             <div class="card">
               <div class="card-body">
-                <h5 class="card-title">Graphic Design</h5>
+                <h5 class="card-title"><strong>Graphic Design</strong></h5>
                 <p class="card-text">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                  Phasellus at placerat mauris.
+                  With my creative mind, I can bring your ideas to life with
+                  unique and eye-catching designs. I'm not afraid to experiment
+                  with new design techniques or styles, and I always strive to
+                  deliver designs that are both aesthetically pleasing and
+                  functional.
                 </p>
               </div>
             </div>
@@ -134,7 +170,7 @@
     <!-- PORTFOLIO -->
     <section id="portfolio" class="py-5">
       <div class="container">
-        <h2 class="text-center mb-5">My Portfolio</h2>
+        <h2 class="text-center mb-5"><strong>My Portfolio</strong></h2>
         <div class="row">
           <div class="col-md-4 mb-4">
             <div class="card">
@@ -191,7 +227,7 @@
     <!-- CONTACT -->
     <section id="contact" class="py-5">
       <div class="container">
-        <h2 class="text-center mb-5">Contact Me</h2>
+        <h2 class="text-center mb-5"><strong>Contact Me</strong></h2>
         <div class="row">
           <div class="col-md-6">
             <form>
