--- a/index.html
+++ b/index.html
@@ -14,29 +14,25 @@
     <!-- Custom CSS -->
     <link rel="stylesheet" href="style.css" />
   </head>
+
   <body>
     <!-- HEADER -->
     <header class="text-center py-5 custom-bg">
       <div class="container">
         <h1 class="text-white">MY PORTFOLIO</h1>
-        <p class="text-white">
-          My web development and creative app portfolio showcases my passion for
-          using technology to create visually stunning, user-friendly websites
-          and applications. I have a strong understanding of web development
-          concepts, programming languages, and creative apps like Adobe
-          Photoshop and Premiere. Through my projects, I've highlighted my
-          ability to collaborate with clients and deliver high-quality web
-          development solutions within budget and on time. My portfolio reflects
-          my creativity, attention to detail, and project management skills. It
-          demonstrates my commitment to excellence, my love for creativity, and
-          my desire to make a positive impact in the field of web development.
+        <p class="text-white custom-text">
+          My Portfolio showcases passion for web and apps. Strong in concepts,
+          languages, Adobe tools. Delivers quality solutions within budget &
+          time, highlights collaboration skills. Demonstrates creativity,
+          attention to detail, project management, and commitment to excellence
+          in web development.
         </p>
-        <a href="#about" class="btn btn-lg btn-light">Learn More</a>
+        <a href="#about" class="btn btn-light mt-3">Learn More</a>
       </div>
     </header>
 
     <!-- NAV BAR -->
-    <nav class="navbar navbar-expand-lg navbar-light custom-bg2">
+    <nav class="navbar navbar-expand-lg navbar-dark custom-bg2">
       <div class="container">
         <button
           class="navbar-toggler border-0 p-0"
@@ -47,10 +43,10 @@
           aria-expanded="false"
           aria-label="Toggle navigation"
         >
-          <span class="fas fa-bars fa-lg text-white"></span>
+          <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
+          <ul class="navbar-nav ms-auto">
             <li class="nav-item">
               <a class="nav-link" href="#index">Home</a>
             </li>
@@ -170,56 +166,103 @@
     <!-- PORTFOLIO -->
     <section id="portfolio" class="py-5">
       <div class="container">
-        <h2 class="text-center mb-5"><strong>My Portfolio</strong></h2>
-        <div class="row">
-          <div class="col-md-4 mb-4">
-            <div class="card">
+        <h2 class="text-center mb-5"><strong>My Previous Works</strong></h2>
+        <!-- CAROUSEL -->
+        <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
+          <div class="carousel-indicators">
+            <button
+              type="button"
+              data-bs-target="#myCarousel"
+              data-bs-slide-to="0"
+              class="active"
+              aria-current="true"
+              aria-label="Slide 1"
+            ></button>
+            <button
+              type="button"
+              data-bs-target="#myCarousel"
+              data-bs-slide-to="1"
+              aria-label="Slide 2"
+            ></button>
+            <button
+              type="button"
+              data-bs-target="#myCarousel"
+              data-bs-slide-to="2"
+              aria-label="Slide 3"
+            ></button>
+          </div>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
               <img
-                src="https://via.placeholder.com/400x300"
-                alt="Project Image"
-                class="card-img-top"
+                src="images/Replicate Google Homepage.png"
+                class="d-block w-100"
+                alt="Slide 1"
               />
-              <div class="card-body">
-                <h5 class="card-title">Project 1</h5>
-                <p class="card-text">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                  Phasellus at placerat mauris.
+              <div class="carousel-caption d-none d-md-block">
+                <h5>Project 1 (Replicate Google Homepage)</h5>
+                <p>
+                  For my first project, I've recreated a homepage of the famous
+                  search engine "Google," using only HTML with the help of
+                  Bootstrap.
+                </p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img
+                src="images/E Calculator.png"
+                class="d-block w-100"
+                alt="Slide 2"
+              />
+              <div class="carousel-caption d-none d-md-block">
+                <h5>Project 2 (E-Calculator)</h5>
+                <p>
+                  For my second project, I have created a E-Calculator using
+                  HTML, CSS, and JavaScript.
+                </p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img
+                src="images/Mini Project 1.png"
+                class="d-block w-100"
+                alt="Slide 3"
+              />
+              <div class="carousel-caption custom-caption d-none d-md-block">
+                <h5>Project 3 (E-Magazine)</h5>
+                <p>
+                  For my third project, I developed a E-Magazine website for
+                  aspiring Photographers, and for people who are interested in
+                  Photography.
                 </p>
               </div>
             </div>
           </div>
-          <div class="col-md-4 mb-4">
-            <div class="card">
-              <img
-                src="https://via.placeholder.com/400x300"
-                alt="Project Image"
-                class="card-img-top"
-              />
-              <div class="card-body">
-                <h5 class="card-title">Project 2</h5>
-                <p class="card-text">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                  Phasellus at placerat mauris.
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4 mb-4">
-            <div class="card">
-              <img
-                src="https://via.placeholder.com/400x300"
-                alt="Project Image"
-                class="card-img-top"
-              />
-              <div class="card-body">
-                <h5 class="card-title">Project 3</h5>
-                <p class="card-text">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                  Phasellus at placerat mauris.
-                </p>
-              </div>
-            </div>
-          </div>
+          <button
+            class="carousel-control-prev"
+            type="button"
+            data-bs-target="#myCarousel"
+            data-bs-slide="prev"
+          >
+            <span
+              class="carousel-control-prev-icon bg-dark"
+              aria-hidden="true"
+              style="font-size: 2rem"
+            ></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button
+            class="carousel-control-next"
+            type="button"
+            data-bs-target="#myCarousel"
+            data-bs-slide="next"
+          >
+            <span
+              class="carousel-control-next-icon bg-dark"
+              aria-hidden="true"
+              style="font-size: 2rem"
+            ></span>
+            <span class="visually-hidden">Next</span>
+          </button>
         </div>
       </div>
     </section>
