--- a/index.html
+++ b/index.html
@@ -340,16 +340,26 @@
           <div class="col-md-12 text-center">
             <ul class="list-unstyled d-flex justify-content-center mb-3">
               <li>
-                <a href="#"><i class="fab fa-facebook"></i></a>
+                <a href="https://www.facebook.com/ralph.vinze" target="_blank"
+                  ><i class="fab fa-facebook"></i
+                ></a>
               </li>
               <li>
-                <a href="#"><i class="fab fa-twitter"></i></a>
+                <a href="https://twitter.com/ralphvinze" target="_blank"
+                  ><i class="fab fa-twitter"></i
+                ></a>
               </li>
               <li>
-                <a href="#"><i class="fab fa-instagram"></i></a>
+                <a href="https://www.instagram.com/ralph_vinze/" target="_blank"
+                  ><i class="fab fa-instagram"></i
+                ></a>
               </li>
               <li>
-                <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                <a
+                  href="https://www.linkedin.com/in/ralph-vinze-9a7149231/"
+                  target="_blank"
+                  ><i class="fab fa-linkedin-in"></i
+                ></a>
               </li>
             </ul>
             <p class="text-white mb-0">
